# adaptive-rl-agent-runtime

./: .gitignore  README.md  pyproject.toml
adaptive_coding_runtime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adaptive_runtime/agents/: evaluator.py  memory.py  planner.py  policy.py  reflection.py
adaptive_runtime/rerankers/: memory_reranker.py
adaptive_runtime/storage/: lesson_usage_tracker.py  trajectory_logger.py
data/learning/: lessons.jsonl  reward_events.jsonl  trajectories.jsonl
data/policy/: bandit_policy.json
data/reports/: dataset_quality_report.md  trajectory_review_summary.md
docs/: architecture.md  roadmap.md  runtime-evaluation.md  trajectory-learning.md
examples/: README.md  sample_runtime_report.md  sample_trajectory_mcp_settings.json
scripts/: 01_collect_github_trajectory_dataset.py  02_parse_issue_trajectory.py  03_build_learning_dataset.py  04_generate_lessons.py  05_evaluate_dataset_quality.py  06_review_trajectory_quality.py  06_review_trajectory_quality_v2.py  07_build_lesson_index.py  08_query_memory_agent.py  09_runtime_with_memory_demo.py  10_plan_runtime_action.py  11_reflect_runtime_answer.py  12_run_runtime_eval_and_log.py  13_inspect_runtime_logs.py  14_view_trajectory.py  15_generate_trajectory_report.py  16_train_bandit_policy.py  17_runtime_with_policy.py  18_evaluate_policy.py  19_log_policy_experiment.py  22_review_memory_db.py  24_review_lesson_usage.py  25_score_lesson_quality.py  26_query_quality_aware_memory.py  README_pipeline.md
